--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="estilo.css">
 		<link rel="icon" href="icono.jpg">
-
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
 	</head>
 
 	<body>
 		<div class="header">
-			<h1>Tramitando la Ciudadanía Italiana</h1>
-			<h2>en Buenos Aires, Argentina</h2>
-			<div class="menu">
-				<ul class=lista>
-					<li>Inicio</li>
-					<li>¿Quién soy?</li>
-					<li>Contacto</li>
-					<li><a href="https://www.instagram.com/tramitandociudadania" target="_blank"> <img src="instagram.png" width="50" height="50"></a></li>
-				</ul>
+			<div class="logo">
+				<img class="logo" src="icono.jpg" width:="100" height="100">
+			</div>
+			<div class=tituloPagina>
+				<h1>Tramitando la Ciudadanía Italiana</h1>
+				<h2>en Buenos Aires, Argentina</h2>
+			</div>
+			<div class="navbar">
+			  <a href="index.html" class="nav-enlace">Inicio</a>
+			  <a href="quienSoy.html" class="nav-enlace">¿Quién soy?</a>
+			  <a href="contacto.html" class="nav-enlace">Contacto</a>
+			  <a href="https://www.instagram.com/tramitandociudadania" target="_blank" class="nav-enlace"> <img src="instbw.png" width="25" height="25"></a>
 			</div>
 		</div>
 
@@ -25,36 +29,45 @@
 			<div class="row first-row">
 				<div class="article">
 					<a href="unpocodehistoria.html" target="_blank" style="text-decoration:none">
-					<img src="" alt="">
-					<div class="details">Creado por Julieta el día/mes/año</div>
+					<img src="francesca-tirico.jpg" alt="Un poco de historia">
+					<div class="details">Creado por Julieta el 02/jun/2020.</div>
 					<h1>Un poco de historia.</h1>
 					</a>	
 			    </div>	
 			
 				<div class="article">
-					<img src="" alt="">
-					<div class="details">Creado por Julieta el día/mes/año</div>
-					<h1></h1>	
+					<a href="porQue.html" target="_blank" style="text-decoration:none">
+					<img src="francesca-tirico.jpg" alt="Un poco de historia">
+					<div class="details">Creado por Julieta el 03/jun/2020.</div>
+					<h1>¿Por qué tramitar la ciudadanía italiana?</h1>	
+					</a>
 				</div>
 			</div>
+
 			<div class="row second-row">
 				<div class="article">
-					<img src="" alt="">
+					<img src="agrigento.jpg" alt="">
 					<div class="details">Creado por Julieta el día/mes/año</div>
-					<h1></h1>	
+					<h1>Preguntas frecuentes.</h1>	
 				</div>	
 				<div class="article">
-					<img src="" alt="">
+					<img src="alley.jpg" alt="">
 					<div class="details">Creado por Julieta el día/mes/año</div>
-					<h1></h1>	
+					<h1>¿Cómo empezar? Búsqueda de partidas.</h1>	
 				</div>
 				<div class="article">
-					<img src="" alt="">
+					<img src="alley.jpg" alt="">
 					<div class="details">Creado por Julieta el día/mes/año</div>
-					<h1></h1>	
+					<h1>Links útiles.</h1>	
 				</div>				
 			</div>
 		</div>
+
+		<footer>
+			<a href="https://cafecito.app/julycir" target="_blank" class="cafecito">Acá me podés invitar un café</a>
+			<a href="https://www.patreon.com/tramitandoCiudadania" target="_blank" class="cafecito">o colaborar con la página.</a>
+		  <p>© 2020 Julieta Ciraolo</p>
+		</footer>
 	</body>
 </html>
 
